fixed profile name overflow

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,7 @@
   -moz-box-shadow:    0 0 5px black;
   box-shadow:         0 0 5px black;
 }
+.profile-details{
+  width: 160px;
+  overflow: hidden;
+}
